--- a/PnPFileSync/README
+++ b/PnPFileSync/README
@@ -26,9 +26,12 @@ Place config files in pnp_files/config, template files in pnp_files/template etc
 Use src/file_sync.py to check if a file exists on the controller, update it if it does, or upload it if it is not present
 
 
-apic_config.py has the name and login credentials for APIC-EM.  NOTE:  You can also use environment variables for these parameters too.
+apic_config.py has the name and login credentials for APIC-EM as well as the PNP_DIR to be used for the location of the pnp_files.
+
+NOTE:  You can also use environment variables for these parameters too.
    APIC, APIC_USER, APIC_PASSWORD will be looked at first.
    export APIC_PASSWORD="mysecrete" for example
+   export PNP_DIR="../../files"
 
 To run:
 src/file_sync.py
